1、升级Gradle版本 2、去除Gradle 设置项目 Java 版本警告